--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baristas</title>
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/general.css">
+
+    <link rel="stylesheet" href="https://use.typekit.net/phs1itr.css">
   </head>
   <body>
+    <header>
         <h1>Baristas</h1>
         <nav>
           <ul>
@@ -17,11 +21,6 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
-  
     </header>
-
-
-
-	
   </body>
 </html>
