--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,26 @@
             <button class="submit-button" type="submit">Send a message</button>
         </form>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <h2>Do you have any questions?</h2>
+                <p>yayayemail.com</p>
+            </div>
+        <div class="footer-content">
+            <h2>Visit us</h2>
+            Suite 10, Central Square, 199 New Road
+            <br>Linwood, NJ 08221
+        </div>
+        <div class="footer-content">
+            <h2>Book a coffee flight</h2>
+            <p>Call tel</p>
+        </div>
+        </div>
+        <div class="copyright">
+            <p>2024 Baristas</p>
+        </div>
+    </footer>
         
   </body>
 </html>
