--- a/contact.html
+++ b/contact.html
@@ -80,16 +80,16 @@
         <div class="footer-container">
             <div class="footer-content">
                 <h2>Do you have any questions?</h2>
-                <p>yayayemail.com</p>
+                <p><a href="mailto:welovebaristas@gmail.com">welovebaristas&#64;gmail.com</a></p>
             </div>
         <div class="footer-content">
             <h2>Visit us</h2>
-            Suite 10, Central Square, 199 New Road
-            <br>Linwood, NJ 08221
+            <p><a target="_blank" href="https://maps.app.goo.gl/nsj44fYuBxaArsex6">Suite 10, Central Square, 199 New Road
+            <br>Linwood, NJ 08221</a></p>
         </div>
         <div class="footer-content">
             <h2>Book a coffee flight</h2>
-            <p>Call tel</p>
+            <p><a href="tel:+6099042990">(609) 904-2990</a></p>
         </div>
         </div>
         <div class="copyright">
