--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,9 @@
             <p><a href="tel:+6099042990">(609) 904-2990</a></p>
         </div>
         </div>
+        <hr class="footer-break">
         <div class="copyright">
-            <p>2024 Baristas</p>
+            <p>&copy; 2024 Baristas Coffee House by Miraglia Bros. | All Rights Reserved</p>
         </div>
     </footer>
         
