--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   </head>
   <body>
         <nav>
-            <img alt="logo" class="nav-logo" src="images/baristas-logo.png">
+            <img alt="logo" class="nav-logo" src="images/baristas-logo-transparent.png">
             <ul>
                 <li><a href="#">Home</a></li>                              
                 <li><a href="#">Info</a></li>               
