--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <span></span>
             <span></span>
         </div>
-        <a href="index.html"><img alt="logo" class="nav-logo" src="images/baristas-logo-transparent.png"></a>
+        <a href="index.html"><img alt="logo" class="nav-logo" src="images/logoNEW.png"></a>
         <div class="nav-menu" id="nav-menu">
           <ul>
               <li><a href="#">Home</a></li>                              
