--- a/index.html
+++ b/index.html
@@ -6,21 +6,34 @@
     <title>Baristas</title>
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/general.css">
-
+    <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="https://use.typekit.net/phs1itr.css">
+    <link rel="stylesheet" href="styles/banner.css">
   </head>
   <body>
-    <header>
-        <h1>Baristas</h1>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Coffee Flights</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-    </header>
+    <nav>
+        <div class="hamburger-menu" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <a href="index.html"><img alt="logo" class="nav-logo" src="images/logoNEW.png"></a>
+        <div class="nav-menu" id="nav-menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>                              
+                <li><a href="info.html">Info</a></li>               
+                <li><a href="coffeeflights.html">Coffee Flights</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+          <div href="menu.html" class="nav-button-container">
+            <a href="menu.html"><button class="nav-button" type="button">Menu</button></a>
+          </div>
+          <p>Suite 10, Central Square, 199 New Road Linwood, NJ 08221</p>
+        </div>
+      </nav>
+      <div class="main-content">
+     
+
+      </div>
   </body>
 </html>
