--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,14 @@
         </div>
         <a href="index.html"><img alt="logo" class="nav-logo" src="images/logoNEW.png"></a>
         <div class="nav-menu" id="nav-menu">
-          <ul>
-              <li><a href="#">Home</a></li>                              
-              <li><a href="#">Info</a></li>               
-              <li><a href="#">Coffee Flights</a></li>
-              <li><a href="#">Contact</a></li>
-          </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>                              
+                <li><a href="info.html">Info</a></li>               
+                <li><a href="coffeeflights.html">Coffee Flights</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
           <div class="nav-button-container">
-            <button class="nav-button" type="button">Menu</button>
+            <a href="menu.html"><button class="nav-button" type="button">Menu</button></a>
           </div>
           <p>Suite 10, Central Square, 199 New Road Linwood, NJ 08221</p>
         </div>
