--- a/contact.html
+++ b/contact.html
@@ -50,21 +50,21 @@
     <div class="icons-container">
         <div class="icon">
             <div class="icon-content">
-                <ion-icon class="icon-image" name="call-outline"></ion-icon>
+                <img alt="Phone Icon" class="image-icons" src="images/icons/call-outline.png">
                 <p>Call us</p>
                 <p><a href="tel:+6099042990">(609) 904-2990</a></p>
             </div>
         </div>
         <div class="icon">
             <div class="icon-content">
-                <ion-icon class="icon-image" name="mail-outline"></ion-icon>
+                <img alt="Email Icon" class="image-icons" src="images/icons/mail-outline.png">
                 <p>Send us an email</p>
                 <p><a href="mailto:welovebaristas@gmail.com">welovebaristas&#64;gmail.com</a></p>
             </div>
         </div>
         <div class="icon">
             <div class="icon-content">
-                <ion-icon class="icon-image" name="home-outline"></ion-icon>
+                <img alt="Location Icon" class="image-icons" src="images/icons/home-outline.png">
                 <p>Visit us</p>
                 <p><a target="_blank" href="https://maps.app.goo.gl/nsj44fYuBxaArsex6">Suite 10, Central Square, 199 New Road
                     Linwood, NJ 08221</a></p>
@@ -72,7 +72,7 @@
         </div>
         <div class="icon">
             <div class="icon-content">
-                <ion-icon class="icon-image" name="time-outline"></ion-icon>
+                <img alt="Hours Icon" class="image-icons" src="images/icons/time-outline.png">
                 <p>Hours</p>
                 <p>Open everday except Tuesdays from 8 AM - 3 PM</p>
             </div>
@@ -124,7 +124,6 @@
         </div>
     </footer>
 </div>
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="contact.js"></script>
   </body>
