--- a/location.html
+++ b/location.html
@@ -26,7 +26,7 @@
               <li><a href="contact.html">Contact</a></li>
           </ul>
           <div class="nav-button-container">
-            <a href="menu.html"><button class="nav-button" type="button">Menu</button></a>
+            <a href="menu.html"><button class="nav-button" type="button">Our Menu</button></a>
           </div>
           <p>Suite 10, Central Square, 199 New Road Linwood, NJ 08221</p>
         </div>
