--- a/contact.html
+++ b/contact.html
@@ -51,21 +51,23 @@
         <div class="icon">
             <div class="icon-content">
                 <img alt="Phone Icon" class="image-icons" src="images/icons/call-outline.png">
-                <p>Call us</p>
+                <p class="icon-header">Call us</p>
                 <p><a href="tel:+6099042990">(609) 904-2990</a></p>
             </div>
         </div>
         <div class="icon">
             <div class="icon-content">
                 <img alt="Email Icon" class="image-icons" src="images/icons/mail-outline.png">
-                <p>Send us an email</p>
+                <div class="mail-space">
+                <p class="icon-header">Send us an email</p>
+                </div>
                 <p><a href="mailto:welovebaristas@gmail.com">welovebaristas&#64;gmail.com</a></p>
             </div>
         </div>
         <div class="icon">
             <div class="icon-content">
                 <img alt="Location Icon" class="image-icons" src="images/icons/home-outline.png">
-                <p>Visit us</p>
+                <p class="icon-header">Visit us</p>
                 <p><a target="_blank" href="https://maps.app.goo.gl/nsj44fYuBxaArsex6">Suite 10, Central Square, 199 New Road
                     Linwood, NJ 08221</a></p>
             </div>
@@ -73,8 +75,8 @@
         <div class="icon">
             <div class="icon-content">
                 <img alt="Hours Icon" class="image-icons" src="images/icons/time-outline.png">
-                <p>Hours</p>
-                <p>Open everday except Tuesdays from 8 AM - 3 PM</p>
+                <p class="icon-header">Hours</p>
+                <p class="hours-text">Open everday except Tuesdays from 8 AM - 3 PM</p>
             </div>
         </div>
 
