--- a/coffeeflights.html
+++ b/coffeeflights.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="https://use.typekit.net/phs1itr.css">
-    <link rel="stylesheet" href="styles/banner.css">
+    <link rel="stylesheet" href="styles/coffeeflights.css">
   </head>
   <body>
     <nav>
@@ -32,8 +32,88 @@
         </div>
       </nav>
       <div class="main-content">
-     
-
+        <div class="banner-container">
+          <div class="banner">
+              <div class="banner-text-left">
+                  <div class="left-text-content">
+                      <h1>Coffee Flights</h1>
+                  </div>
+              </div>
+              <div class="banner-text-right">
+                  <div class="right-text-content">
+                      <p>WE ARE OPEN EVERYDAY
+                      <br>EXCEPT CLOSED TUESDAYS</p>
+                      <hr class="right-container-line">
+                      <h1>8 AM &#8212; 3 PM</h1>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="coffee-flights-header">
+        <h1>RESERVATIONS</h1>
+        <h2>RECOMMENDED MON.-FRI.&#124;REQUIRED SAT.+SUN.</h2>
+        <h3>RESERVE HERE:BARISTASCOFFEEHOUSE.COM</h3>
+        <h2>ALL FLIGHTS $19.00</h2>
+      </div>
+      <div class="coffee-flights-content">
+        <div class="left-column">
+          <div class="menu-content">
+            <h2>IN FULL BLOOM</h2>
+            <p>Cherry Blossom Latte</p>
+            <p>Strawberry Matcha</p>
+            <p>Café Rose</p>
+            <p>Lavender Vanilla Latte</p>
+          </div>
+          <div>
+            <div class="menu-content">
+              <h2>DESSERT FLIGHT</h2>
+              <p>Hazelnut Truffle Latte</p>
+              <p>Cinnamon Bun Latte</p>
+              <p>Salted Caramel Cream</p>
+              <p>Toffee Nut Latte</p>
+            </div>
+            <div class="menu-content">
+              <h2>CHOCOHOLIC FLIGHT</h2>
+              <p>S'mores Latte</p>
+              <p>Banana Mocha Latte</p>
+              <p>Coconut Mocha Latte</p>
+              <p>Chocolate Covered Strawberry Latte</p>
+            </div>
+          </div>
+        </div>
+        <div class="right-column">
+          <div class="menu-content">
+            <h2>SPRING FLIGHT</h2>
+            <p>Mint Clover Latte</p>
+            <p>Chocolate Peanut Butter Latte</p>
+            <p>Peeps Latte</p>
+            <p>Caramel Coconut Latte</p>
+          </div>
+          <div class="menu-content">
+            <h2>TRADITIONAL FLIGHT</h2>
+            <p>Café Mocha</p>
+            <p>Cappuccino</p>
+            <p>Barista's Latte</p>
+            <p>Caramel Macchiato</p>
+          </div>
+          <div class="menu-content">
+            <h2>TASTE OF TEAS</h2>
+            <p>Chai Tea Latte</p>
+            <p>Matcha Latte</p>
+            <p>London Fog</p>
+            <p>Hibiscus Rose Latte</p>
+          </div>
+          <div class="menu-footer">
+            <h2>CUSTOM FLIGHT PLAN</h2>
+            <p>Choose 4 drinks</p>
+            <p>from any flight menu &amp; enjoy!</p>
+          </div>
+          <div class="bottom-note">
+            <p>Please make sure to specify HOT or ICED &#124; All flights are individually handcrafted</p>
+            <p>Flights may take up to 20 minutes to prepare &#124; Al flights are made with 2% milk unless otherwise specified</p>   
+          </div>
+        </div>
+      </div>
       </div>
   </body>
 </html>
