--- a/coffeeflights.html
+++ b/coffeeflights.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="https://use.typekit.net/phs1itr.css">
     <link rel="stylesheet" href="styles/coffeeflights.css">
+    <link rel="stylesheet" href="styles/footer.css">
   </head>
   <body>
     <nav>
@@ -103,17 +104,46 @@
               <p>London Fog</p>
               <p>Hibiscus Rose Latte</p>
             </div>
-            <div class="menu-footer">
-              <h2>CUSTOM FLIGHT PLAN</h2>
-              <p>Choose 4 drinks</p>
-              <p>from any flight menu &amp; enjoy!</p>
-            </div>
           </div>
+          <div class="menu-footer">
+            <h2>CUSTOM FLIGHT PLAN</h2>
+            <p>Choose 4 drinks</p>
+            <p>from any flight menu &amp; enjoy!</p>
+          </div>    
         </div>
+        <hr class="top-line">
         <div class="bottom-note">
           <p>Please make sure to specify HOT or ICED &#124; All flights are individually handcrafted</p>
           <p>Flights may take up to 20 minutes to prepare &#124; All flights are made with 2% milk unless otherwise specified</p>
         </div>
+        <hr class="bottom-line">
+        <div class="flights-photos">
+          <img class="img" alt="coffee flight" src="images/flights2.jpg">
+          <img class="img" alt="coffee flight" src="images/coffeeglight3.jpg">
+          <img class="img" alt="coffee flight" src="images/cf4.jpeg">
+          <img class="img" alt="coffee flight" src="images/cf5.jpg">
+        </div>
+        <footer>
+          <div class="footer-container">
+              <div class="footer-content">
+                  <h2>Do you have any questions?</h2>
+                  <p><a href="mailto:welovebaristas@gmail.com">welovebaristas&#64;gmail.com</a></p>
+              </div>
+          <div class="footer-content">
+              <h2>Visit us</h2>
+              <p><a target="_blank" href="https://maps.app.goo.gl/nsj44fYuBxaArsex6">Suite 10, Central Square, 199 New Road
+              <br>Linwood, NJ 08221</a></p>
+          </div>
+          <div class="footer-content">
+              <h2>Book a coffee flight</h2>
+              <p><a href="tel:+6099042990">(609) 904-2990</a></p>
+          </div>
+          </div>
+          <hr class="footer-break">
+          <div class="copyright">
+              <p>&copy; 2024 Baristas Coffee House by Miraglia Bros. | All Rights Reserved</p>
+          </div>
+      </footer>
       </div>
   </body>
 </html>
