--- a/menu.html
+++ b/menu.html
@@ -32,6 +32,23 @@
         </div>
       </nav>
       <div class="main-content">
+        <div class="menu-container">
+          <h2>Breakfast Specialties</h2>
+          <hr>
+          <h4>Veggie Scrambler <span>14</span></h4>
+          <p>Scrabled eggs, topped with sauteed spimach, tomatoes and sliced avocado, served with home fries</p>
+          <h4>Breakfast Burrito <span>13</span></h4>
+          <p>Scrambled eggs, home fries, avocado, sauteed onions, shredded cheddar ? a sour cream salsa blend wrapped in a grilled flour tortilla</p>
+          <h4>Homestyle Breakfast<span>12</span></h4>
+          <p>Two eggs cooked your way, served with homefries, toast and your choice of breakfast meat</p>
+          <h4>Smoked Salmon Platter or Sandwhich <span>17.50</span></h4>
+          <p>Served with an everything bagel with cream cheese, lettuce, tomatoeos, red onion, cucumbers and capers as a platter or as a sandwhich</p>
+          <h4>Breakfast Quesadilla <span>13.50</span></h4>
+          <p>Scrambled eggs and sausage melted in a three cheese blend and grilled in a flour tortilla</p>
+          <p>Served with a side of sour cream salsa</p>
+          <h4>Waffle Hollandaise <span>16</span></h4>
+          <p>Homemade Brussels waffle topped with two fried eggs, ham and hollandaise sauce</p>
+        </div>
      
 
       </div>
