--- a/coffeeflights.html
+++ b/coffeeflights.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/banner.css">
     <link rel="stylesheet" href="https://use.typekit.net/phs1itr.css">
     <link rel="stylesheet" href="styles/coffeeflights.css">
     <link rel="stylesheet" href="styles/footer.css">
@@ -53,7 +54,7 @@
         <div class="coffee-flights-header">
           <h1>RESERVATIONS</h1>
           <h2>RECOMMENDED MON.-FRI. &#124; REQUIRED SAT.+SUN.</h2>
-          <h3>RESERVE HERE: BARISTASCOFFEEHOUSE.COM</h3>
+          <h3>RESERVE HERE: <a target="_blank" href="https://baristascoffeeflights.as.me/schedule/298cbb23/appointment/37407468/calendar/7276854">BARISTASCOFFEEHOUSE.COM</a></h3>
           <h2>ALL FLIGHTS $19.00</h2>
         </div>
         <div class="coffee-flights-content">
