--- a/info.html
+++ b/info.html
@@ -28,9 +28,21 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="nav-button-container">
-          <a href="menu.html"><button class="nav-button" type="button">Menu</button></a>
+          <a href="menu.html"><button class="nav-button" type="button">Our Menu</button></a>
         </div>
         <p>Suite 10, Central Square, 199 New Road Linwood, NJ 08221</p>
+      </div>
+      <div class="social-button-container">
+        <button class="social-button">
+          <a href="https://www.instagram.com/baristascoffeehouse" target="_blank">
+          <img class="social-icon" src="images/icons/instagram-logo-light.png">
+          </a>
+        </button>
+        <button class="social-button">
+          <a href="https://www.facebook.com/BaristasNJ" target="_blank">
+          <img class="social-icon" src="images/icons/facebook-icon-light.png">
+          </a>
+        </button>
       </div>
     </nav>
     <div class="banner-container">
