Implemented Social buttons on every page
- As title says, also linked header.css to contact.html (you forgot i guess)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
           </div>
           <p>Suite 10, Central Square, 199 New Road Linwood, NJ 08221</p>
         </div>
-      </nav>
+      <div class="social-button-container">
+        <button class="social-button">
+          <a href="https://www.instagram.com/baristascoffeehouse" target="_blank">
+            <img class="social-icon" src="images/icons/instagram-logo-light.png">
+          </a>
+        </button>
+        <button class="social-button">
+          <a href="https://www.facebook.com/BaristasNJ" target="_blank">
+            <img class="social-icon" src="images/icons/facebook-icon-light.png">
+          </a>
+        </button>
+      </div>
+    </nav>
       <div class="main-content">
      
 
