--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="https://use.typekit.net/phs1itr.css">
+    <link rel="stylesheet" href="styles/header.css">
   </head>
   <body>
     <nav>
@@ -28,7 +29,19 @@
           </div>
           <p>Suite 10, Central Square, 199 New Road Linwood, NJ 08221</p>
         </div>
-      </nav>
+      <div class="social-button-container">
+        <button class="social-button">
+          <a href="https://www.instagram.com/baristascoffeehouse" target="_blank">
+            <img class="social-icon" src="images/icons/instagram-logo-light.png">
+          </a>
+        </button>
+        <button class="social-button">
+          <a href="https://www.facebook.com/BaristasNJ" target="_blank">
+            <img class="social-icon" src="images/icons/facebook-icon-light.png">
+          </a>
+        </button>
+      </div>
+    </nav>
     <div class="main-content">
     <div class="banner-container">
         <div class="banner">
