--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="https://use.typekit.net/phs1itr.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/banner.css">
   </head>
   <body>
     <nav>
